Fix bottom toolbar being cut off a bit

--- a/app/stylesheets/colors.less
+++ b/app/stylesheets/colors.less
@@ -1,1 +1,3 @@
 @app-orange: #ef6c00;
+@controls: #ffffff;
+@controls-hover: #e9e9e9;
