--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -22,12 +22,28 @@ html, body {
   background-color: @app-orange;
 
   .top-panel-controls {
+    padding-top: 2px;
     padding-left: 80px;
 
     a {
-      color: white;
+      font-size: 1.2em;
+      color: @controls;
       text-decoration: none;
       cursor: pointer;
+      :hover {
+        color: @controls-hover;
+      }
     }
   }
+}
+
+.middle-panel {
+  width: 100%;
+  height: 98%;
+}
+
+.bottom-panel {
+  height: 20px;
+  width: 100%;
+  background-color: @app-orange;
 }
